# olist-data-auditing-and-modeling

./: .gitignore  README.md  pyproject.toml
python/: EDA_ETL.py  ETL.py  ciclo3_graficos.py  class_elt.py  func_estatistica.py  upload_sql.py
python/data_cleaning_results/: vendedores_limpa.csv
python/testes/: analise parcelas1.csv  analise parcelas2.csv  teste.csv  teste.py
scripts_sql/: estrutura_tabelas.sql  queries_construcao.sql  queries_views.sql  views_consolidadas.sql
