[project]
name = "olist-data-auditing-and-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Yuken",email = "eaiyukenish4.0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "unidecode (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
